      and part of rt.cpan.org #2954]
    * DESTDIR is now not directly prepended to the INSTALL* variables.
      installation targets now use DESTINSTALL* instead.  This prevents
      the DESTDIR from showing up in places it shouldn't like perllocal.pod.
      DESTDIR is still appearing in .packlist (bug). [rt.cpan.org #2954]

6.10_07 Sat Jul  5 16:12:52 PDT 2003
    * Fixing location of perllocal.pod so its always in INSTALLARCHLIB
      instead of one for each perl, site and vendor.
    - Sun's make treats escaped newlines oddly.  Switching oneliner() back
      to using multiple -e's.
    * Bug in libscan() meant that any .pm containing RCS or CVS or SCCS
      in its name (for example, RCS.pm) would be skipped.
    - Command.t was getting confused in the core because it was reading
      files from the core t/ directory, not MakeMaker's t/ directry.
    - MM_OS2 PERL_ARCHIVE_AFTER test wrong for a.out systems (Ilya)
    - Fixing perllocal.pod and XS installation on VMS.  An extraneous
      newline was introduced when changing the install macros over to
      $(ECHO).
    - Added $(ECHO_N) macro to emulate 'echo -n'

6.10_06 Sat Jun  7 00:55:29 PDT 2003
    - Whoops, Liblist.t busted on VMS after I turned strict on in
      ExtUtils::Liblist::Kid.  Merely a test bug, not a real bug.
    - Fixed metafile_addtomanifest failure so the proper error shows.
    - Fixed metafile_addtomanifest failure diagnostic leaking out during
      the basic.t test on Windows.

6.10_05 Fri Jun  6 18:15:30 PDT 2003
    * Documenting META.yml, NO_META
    * Documenting the fact that distdir will auto generate META.yml and 
      alter your manifest.
    * Adding META.yml autogeneration to the FAQ
    - Recognizing comments with leading whitespace in MANIFESTs better.
    - Small ExtUtils::Liblist::Kid problem on VMS (Craig Berry)
    * Fixed "make install UNINST=1".  Appears to have been broken somewhere
      around 6.06_01.